# spreader

./: .gitignore  Acknowledgments.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml  test.yml
cmake/: dependencies.cmake
lib/code/: CMakeLists.txt
lib/code/inc/spreader/: array.h  ast-node.h  cell-grid.h  cell.h  coerce.h  compiler.h  coro-async.h  coro-generator.h  error-handling.h  error.h  externals.h  fixed-size-memory-resource.h  floating-decimal.h  formula-references.h  formula.h  geometry.h  interval-map.h  iteration.h  linked-list.h  mru-cache.h  name-manager.h  number.h  numeric.h  reference.h  scalar-generator.h  scalar.h  sheet.h  stack-memory-resource.h  tree-traversal.h  typelist.h  types.h  util.h
lib/code/src/: ast-node.cpp  cell-grid.cpp  cell.cpp  coerce.cpp  error.cpp  execution-context.h  floating-decimal.cpp  formula-evaluator.cpp  formula-evaluator.h  formula-parser-builder.h  formula-references.cpp  formula.cpp  formula.l  formula.y  macro-map.h  mini-trie.h  name-manager.cpp  number-matcher.h  number.cpp  scalar-aggregators.h  scalar-boolean-aggregators.h  scalar-boolean-functions.h  scalar-date-functions.h  scalar-function.h  scalar-info-functions.h  scalar-lookup.h  scalar-numeric-aggregators.h  scalar-numeric-functions.h  scalar-operators.h  scalar-string-aggregators.h  scalar-string-functions.h  scalar-xif-matcher.cpp  scalar-xif-matcher.h  sheet.cpp  whitespace.h  wildcarder.h
lib/code/src/functions/: adding-function.md  aggregator-function.cpp  aggregator-if-function.cpp  binary-operators.cpp  binary-operators.h  finite-scalar-function.cpp  func-choose.cpp  func-concatenate.cpp  func-hvlookup.cpp  func-if.cpp  func-index.cpp  func-indirect.cpp  func-match.cpp  func-row-column.cpp  func-switch.cpp  func-transpose.cpp  true-function-creation.h  true-function.cpp  true-function.h  unary-operators.cpp  unary-operators.h
lib/test/: CMakeLists.txt  main.cpp  test-cell-grid.cpp  test-coercion.cpp  test-floating-decimal.cpp  test-formula-address.cpp  test-formula-and-or-xor-not.cpp  test-formula-average.cpp  test-formula-ceil-floor.cpp  test-formula-choose.cpp  test-formula-concatenate.cpp  test-formula-count.cpp  test-formula-date.cpp  test-formula-datedif.cpp  test-formula-days.cpp  test-formula-edate-eomonth.cpp  test-formula-find.cpp  test-formula-hlookup.cpp  test-formula-index.cpp  test-formula-indirect.cpp  test-formula-int-mod.cpp  test-formula-is-errors.cpp  test-formula-left-right.cpp  test-formula-len.cpp  test-formula-lower-upper.cpp  test-formula-match.cpp  test-formula-math-op.cpp  test-formula-max-min.cpp  test-formula-mid-replace.cpp  test-formula-now-today.cpp  test-formula-parser.cpp  test-formula-round.cpp  test-formula-row-column.cpp  test-formula-sign.cpp  test-formula-stdev.cpp  test-formula-substitute.cpp  test-formula-sum.cpp  test-formula-sumif.cpp  test-formula-switch.cpp  test-formula-time.cpp  (+18 more)
tools/: next-version.py
wrappers/javascript/: CMakeLists.txt  main.cpp  package.json.config  spreader.d.ts  wrapper.js
wrappers/javascript/test/: CMakeLists.txt  cell-access.js  copy-move.js  insert-delete.js  length-info.js  lifecycle.js  package.json.config  parsing.js  recalc.js  util.js
wrappers/python/: .gitignore  CMakeLists.txt
wrappers/python/src/eg/spreader/: common.h  globals.h  main.cpp  marshalling.h  sheet.py  types.py
wrappers/python/src/spreader/: __init__.py  arguments.h  main.cpp  sheet.py  types.py  util.h
wrappers/python/test/: debug.cpp  test_cell_access.py  test_copy_move.py  test_insert_delete.py  test_length_info.py  test_parsing.py  test_recalc.py  test_types.py  utils.py
